--- a/appspec.yaml
+++ b/appspec.yaml
@@ -1,10 +1,10 @@
-version: 1.0
-Resources:
-  - TargetService:
-      Type: AWS::ECS::Service
-      Properties:
-        TaskDefinition: "arn:aws:ecs:us-east-1:278772998776:task-definition/aws-hello-world-rest-api:2"
+# version: 1.0
+# Resources:
+#   - TargetService:
+#       Type: AWS::ECS::Service
+#       Properties:
+#         TaskDefinition: "arn:aws:ecs:us-east-1:278772998776:task-definition/aws-hello-world-rest-api:2"
 #         LoadBalancerInfo:
 #           ContainerName: "aws-hello-world-rest-api"
 #           ContainerPort: "80"
-        PlatformVersion: "LATEST"
+#         PlatformVersion: "LATEST"
